--- a/weather_cleaning.ipynb
+++ b/weather_cleaning.ipynb
@@ -6,7 +6,7 @@
       "name": "weather_cleaning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNphwK1Yn8u4IkkPtd6hAjt",
+      "authorship_tag": "ABX9TyOisnH/ia5TyRdsL51uH5Ub",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -308,7 +308,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# If I want to exactly this columns which have null values\n",
+        "# Only those columns that have null values ​​are found\n",
+        "\n",
         "null=df.columns[df.isnull().any()]\n",
         "df[null].isnull().sum()"
       ],
@@ -340,6 +341,7 @@
       "cell_type": "code",
       "source": [
         "# Rename the column 'w speed' \n",
+        "\n",
         "df.rename(columns={'w speed': 'wspeed'}, inplace=True)"
       ],
       "metadata": {
@@ -351,7 +353,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# when I need to see the where is the null value\n",
+        "# Rows that have null values\n",
+        "\n",
         "df[df.isnull().any(axis=1)]"
       ],
       "metadata": {
@@ -545,6 +548,7 @@
       "cell_type": "code",
       "source": [
         "# If you want to be more specific which column and where is the null value\n",
+        "\n",
         "null=df.columns[df.isnull().any()]\n",
         "print(df[df.isnull().any(axis=1)][null])"
       ],
@@ -1098,7 +1102,7 @@
       "cell_type": "code",
       "source": [
         "# We have negative value in temp column\n",
-        "# and a not suitable value in event column\n",
+        "# And the event column has a different value\n",
         "# Let's fix it.\n",
         "\n",
         "df.loc[8, 'temp']=np.nan\n",
@@ -1407,7 +1411,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# This method helps us to set value, which value is the most\n",
+        "# The value that is most in number will replace the null value\n",
         "\n",
         "df['event'].fillna(df['event'].mode()[0], inplace=True)\n",
         "df"
