--- a/data-cleaning-practice/weather_cleaning.ipynb
+++ b/data-cleaning-practice/weather_cleaning.ipynb
@@ -6,7 +6,7 @@
       "name": "weather_cleaning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOisnH/ia5TyRdsL51uH5Ub",
+      "authorship_tag": "ABX9TyMYCg1u6h1N5Xgg14v2KRkF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "gtIJ1pMp4ZYe"
       },
@@ -44,7 +44,7 @@
       "cell_type": "code",
       "source": [
         "df=pd.read_csv('weather.csv')\n",
-        "df"
+        "df "
       ],
       "metadata": {
         "colab": {
@@ -52,9 +52,9 @@
           "height": 426
         },
         "id": "nrPfAQSa4xGF",
-        "outputId": "04450086-f4b6-4aa3-840b-989105b71589"
+        "outputId": "9aed6585-17f9-4021-f5f0-9ff3c2696cff"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -70,13 +70,13 @@
               "6    1/9/21  NaN     NaN       NaN\n",
               "7   1/10/21   34       6    Cloudy\n",
               "8   1/11/21  -40      10     Sunny\n",
-              "9   1/12/21   14    Nice  No Event\n",
+              "9   1/12/21   29    Nice  No Event\n",
               "10  1/13/21  NaN     NaN       NaN\n",
               "11  1/14/21  Hot      18      Nice"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5db5a031-2187-4408-8ab1-54878a0b1d18\">\n",
+              "  <div id=\"df-895a54be-1ae8-43f6-8770-bc49f6f6fff3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -169,7 +169,7 @@
               "    <tr>\n",
               "      <th>9</th>\n",
               "      <td>1/12/21</td>\n",
-              "      <td>14</td>\n",
+              "      <td>29</td>\n",
               "      <td>Nice</td>\n",
               "      <td>No Event</td>\n",
               "    </tr>\n",
@@ -190,7 +190,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5db5a031-2187-4408-8ab1-54878a0b1d18')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-895a54be-1ae8-43f6-8770-bc49f6f6fff3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -241,12 +241,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5db5a031-2187-4408-8ab1-54878a0b1d18 button.colab-df-convert');\n",
+              "          document.querySelector('#df-895a54be-1ae8-43f6-8770-bc49f6f6fff3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5db5a031-2187-4408-8ab1-54878a0b1d18');\n",
+              "          const element = document.querySelector('#df-895a54be-1ae8-43f6-8770-bc49f6f6fff3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -269,7 +269,74 @@
             ]
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['event'].value_counts()\n",
+        "# There are some null values in event column. But where are they ? \n",
+        "# If we want to see them, then we have to use dropna parameter."
+      ],
+      "metadata": {
+        "id": "D1g0HoiEP2qf",
+        "outputId": "c54a59b6-6aad-452a-aa3f-de154652a637",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Sunny       3\n",
+              "Rain        2\n",
+              "Snow        1\n",
+              "Cloudy      1\n",
+              "No Event    1\n",
+              "Nice        1\n",
+              "Name: event, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['event'].value_counts(dropna=False)"
+      ],
+      "metadata": {
+        "id": "9wHcxwCTQirB",
+        "outputId": "fbd5301a-3cbe-491a-dc4f-31888a739ceb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Sunny       3\n",
+              "NaN         3\n",
+              "Rain        2\n",
+              "Snow        1\n",
+              "Cloudy      1\n",
+              "No Event    1\n",
+              "Nice        1\n",
+              "Name: event, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     },
