--- a/data-cleaning-practice/text_clining.ipynb
+++ b/data-cleaning-practice/text_clining.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMwremvCpwfVUBhbGYx0SAc",
+      "authorship_tag": "ABX9TyOA/DXjhZsYUuZIKK+fE5s9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "id": "m6AJRWMhTPR9",
         "outputId": "908a7db8-8e61-45b4-e930-28df923647e3"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +269,7 @@
         "id": "pQUQcldNTPum",
         "outputId": "1e87d841-4211-4042-a73b-e596219ea468"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -298,7 +298,7 @@
         "id": "09uVYA0LTPwh",
         "outputId": "df9403ad-3800-4798-e4a2-5f19abfc2bfe"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,7 +334,7 @@
         "id": "eC8Hkh3hTP0W",
         "outputId": "899360fb-0586-482a-cd73-e258e19e1c08"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,7 +539,7 @@
       "metadata": {
         "id": "48Bqch7RTP2J"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -553,7 +553,7 @@
       "metadata": {
         "id": "IrHsygQJTP5G"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -572,7 +572,7 @@
         "id": "ycoh5u-1TP8U",
         "outputId": "fa683e63-e5d4-4861-c532-24ca42f3bd04"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -781,7 +781,7 @@
       "metadata": {
         "id": "z3UXqldKZirY"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -798,7 +798,7 @@
         "id": "pAPDZEXvjGQ2",
         "outputId": "5fe7977c-3f4e-4472-e196-182f87820157"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1008,12 +1008,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Normalize the case of words \n",
+        "# Machine doesn't understand different cases so that we have to make it same case.\n",
+        "\n",
+        "text = \"I am Daenerys Stormborn of House Targaryen, of the blood of Old Valyeria. I am the dragon's daughter, and I swear to you that those who would harm you will die screaming.\"\n",
+        "\n",
+        "text=text.lower()\n",
+        "text"
+      ],
       "metadata": {
-        "id": "pMfO8ckpjYEM"
+        "id": "pMfO8ckpjYEM",
+        "outputId": "a6b33f8e-e44b-4810-894f-132c283198c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"i am daenerys stormborn of house targaryen, of the blood of old valyeria. i am the dragon's daughter, and i swear to you that those who would harm you will die screaming.\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
