--- a/data-cleaning-practice/text_cleaning_nltk_reg.ipynb
+++ b/data-cleaning-practice/text_cleaning_nltk_reg.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZFQdft+eje7kmS7cEUHgT",
+      "authorship_tag": "ABX9TyPQnWFmmPDlimPT1ZkORviY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,16 +27,34 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Normalize Case***"
+      ],
+      "metadata": {
+        "id": "Ln3trmqTng2s"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "# Normalize the case of words \n",
+        "# Machine doesn't understand different cases so that we have to make it same case.\n",
+        "\n",
+        "daenerys = \"I am Daenerys Stormborn of House Targaryen, of the blood of Old Valyeria. I am the dragon's daughter, and I swear to you that those who would harm you will die screaming.\"\n",
+        "\n",
+        "daenerys=daenerys.lower()\n",
+        "daenerys"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "id": "nBHtdzLFkDVh",
-        "outputId": "2a1c4127-eb3c-4a48-cc7e-486a0bcd481a"
+        "id": "3VtgmxgjnaXL",
+        "outputId": "ce8480cc-07ec-4aa5-a15e-c601e8d4a377"
       },
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -49,18 +67,18 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 20
         }
-      ],
-      "source": [
-        "# Normalize the case of words \n",
-        "# Machine doesn't understand different cases so that we have to make it same case.\n",
-        "\n",
-        "daenerys = \"I am Daenerys Stormborn of House Targaryen, of the blood of Old Valyeria. I am the dragon's daughter, and I swear to you that those who would harm you will die screaming.\"\n",
-        "\n",
-        "daenerys=daenerys.lower()\n",
-        "daenerys"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Removing Stopwords***"
+      ],
+      "metadata": {
+        "id": "jK-OPzR6nwrI"
+      }
     },
     {
       "cell_type": "code",
@@ -154,6 +172,109 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NkKdCesWs7zZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Stemming and Lemmatization*** "
+      ],
+      "metadata": {
+        "id": "bvI07nL9sMlj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Stemming and Lemmatization are both techniques used to normalize text in NLP. \n",
+        "# walked, walk and walking are all merely different tenses of the same word. \n",
+        "# we have to normalize this otherwise, they’d be treated differently."
+      ],
+      "metadata": {
+        "id": "UUqJnuKeoNTt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "from nltk.stem.porter import PorterStemmer\n",
+        "from nltk.stem import WordNetLemmatizer \n",
+        "\n",
+        "words = ['walk', 'walking', 'walks', 'walked', 'ran', 'run', 'runs', 'running']\n",
+        "\n",
+        "# Stemming\n",
+        "stemmer = PorterStemmer()\n",
+        "for word in words:\n",
+        "  print(word + \"--->\" + stemmer.stem(word))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w9m_AhkEsgXa",
+        "outputId": "27b7818e-aa6f-4308-9238-401aaddcda6d"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "walk--->walk\n",
+            "walking--->walk\n",
+            "walks--->walk\n",
+            "walked--->walk\n",
+            "ran--->ran\n",
+            "run--->run\n",
+            "runs--->run\n",
+            "running--->run\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Lemmatization\n",
+        "\n",
+        "lemmatizer = WordNetLemmatizer()\n",
+        "for word in words:\n",
+        "  print(word + \"--->\" + lemmatizer.lemmatize(word))"
+      ],
+      "metadata": {
+        "id": "TQtKHIJNsqIC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Eh5XgLP0srBL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Unicode string*** "
+      ],
+      "metadata": {
+        "id": "O32eSnL1suur"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# Remove Unicode string\n",
         "\n",
@@ -195,12 +316,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Regular Expression**"
+      ],
+      "metadata": {
+        "id": "XGfh5Cknn-rE"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Removing hashtag, html link, punctuation etc\n",
         "\n",
         "import re \n",
-        "lines = 'She@farhana is good in speaking. But ritu @ritu is good at speaking, communication, writing and listening'\n",
+        "lines = 'She @farhana is good in speaking. But ritu @ritu is good at speaking, communication, writing and listening'\n",
         "y = re.sub('@\\S+', '', lines)\n",
         "y"
       ],
@@ -210,22 +340,22 @@
           "height": 35
         },
         "id": "oQazL4tmkoZJ",
-        "outputId": "d9793c24-0fe0-46f9-f2eb-87c4ab831504"
+        "outputId": "0a480157-f1fa-4805-8dbc-a3c1021caa49"
       },
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'She is good in speaking. But ritu  is good at speaking, communication, writing and listening'"
+              "'She  is good in speaking. But ritu  is good at speaking, communication, writing and listening'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 21
         }
       ]
     },
@@ -310,15 +440,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "61ZaklvPkv-b"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "# remove '#'\n",
         "\n",
@@ -390,11 +511,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Stemming and Lemmatization are both techniques used to normalize text in NLP. \n",
-        "# walked, walk and walking are all merely different tenses of the same word. \n",
-        "# we have to normalize this otherwise, they’d be treated differently."
-      ],
+      "source": [],
       "metadata": {
         "id": "qwvMwa2rkwJb"
       },
@@ -403,56 +520,20 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import nltk\n",
-        "from nltk.stem.porter import PorterStemmer\n",
-        "from nltk.stem import WordNetLemmatizer \n",
-        "\n",
-        "words = ['walk', 'walking', 'walks', 'walked', 'ran', 'run', 'runs', 'running']\n",
-        "\n",
-        "# Stemming\n",
-        "stemmer = PorterStemmer()\n",
-        "for word in words:\n",
-        "  print(word + \"--->\" + stemmer.stem(word))"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "it0m43E-k7yz",
-        "outputId": "bd5bf2c1-35b9-4317-abfc-7d19368136ba"
+        "id": "it0m43E-k7yz"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "walk--->walk\n",
-            "walking--->walk\n",
-            "walks--->walk\n",
-            "walked--->walk\n",
-            "ran--->ran\n",
-            "run--->run\n",
-            "runs--->run\n",
-            "running--->run\n"
-          ]
-        }
-      ]
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Lemmatization\n",
-        "\n",
-        "lemmatizer = WordNetLemmatizer()\n",
-        "for word in words:\n",
-        "  print(word + \"--->\" + lemmatizer.lemmatize(word))"
-      ],
+      "source": [],
       "metadata": {
         "id": "d5vMZ30qk712"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
