--- a/data-cleaning-practice/text_cleaning.ipynb
+++ b/data-cleaning-practice/text_cleaning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMQYawiQv7bi33gHxrL2so6",
+      "authorship_tag": "ABX9TyNkQvmmuF+gespqRUMfhUvd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,12 +24,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ShakilM26/Pandas/blob/main/data-cleaning-practice/text_clining.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ShakilM26/Pandas/blob/main/data-cleaning-practice/text_cleaning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 1,
       "metadata": {
         "id": "i6qZzx8dQzPd"
       },
@@ -54,9 +54,9 @@
           "height": 394
         },
         "id": "m6AJRWMhTPR9",
-        "outputId": "908a7db8-8e61-45b4-e930-28df923647e3"
+        "outputId": "176fec88-d746-4c53-8445-c3b3be0492c6"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,7 +77,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d14d7794-2e53-45bc-bb9e-cf66b72dca8a\">\n",
+              "  <div id=\"df-26aea800-71ad-4d18-8711-264456cb1a8b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -172,7 +172,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d14d7794-2e53-45bc-bb9e-cf66b72dca8a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-26aea800-71ad-4d18-8711-264456cb1a8b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -223,12 +223,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d14d7794-2e53-45bc-bb9e-cf66b72dca8a button.colab-df-convert');\n",
+              "          document.querySelector('#df-26aea800-71ad-4d18-8711-264456cb1a8b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d14d7794-2e53-45bc-bb9e-cf66b72dca8a');\n",
+              "          const element = document.querySelector('#df-26aea800-71ad-4d18-8711-264456cb1a8b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -251,7 +251,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 2
         }
       ]
     },
@@ -267,9 +267,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pQUQcldNTPum",
-        "outputId": "1e87d841-4211-4042-a73b-e596219ea468"
+        "outputId": "9247f732-7cf8-4a75-b119-14ae505495f6"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +282,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 3
         }
       ]
     },
@@ -296,9 +296,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "09uVYA0LTPwh",
-        "outputId": "df9403ad-3800-4798-e4a2-5f19abfc2bfe"
+        "outputId": "3139c390-ab26-4352-d872-0ffb0ceb3a9d"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -312,7 +312,165 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# find the rows where are null values\n",
+        "\n",
+        "df[df['varsity'].isna()]"
+      ],
+      "metadata": {
+        "id": "fSmTCSBZRXQr",
+        "outputId": "532074d0-930d-4ac4-d98a-c82235e1b691",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   varsity player  score\n",
+              "5      NaN  Hadid   86.0\n",
+              "6      NaN  Jenny   94.0\n",
+              "10     NaN   Nuha   86.0"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-b5a260a7-2512-4c14-8011-b3f3351ccd9e\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>varsity</th>\n",
+              "      <th>player</th>\n",
+              "      <th>score</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Hadid</td>\n",
+              "      <td>86.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Jenny</td>\n",
+              "      <td>94.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Nuha</td>\n",
+              "      <td>86.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b5a260a7-2512-4c14-8011-b3f3351ccd9e')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-b5a260a7-2512-4c14-8011-b3f3351ccd9e button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-b5a260a7-2512-4c14-8011-b3f3351ccd9e');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     },
@@ -1003,7 +1161,7 @@
       "metadata": {
         "id": "ytF0eItMjX9p"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1012,7 +1170,7 @@
       "metadata": {
         "id": "oeMn6xYGJ4qc"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1021,7 +1179,7 @@
       "metadata": {
         "id": "7VtYFcT4LRYD"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     }
   ]
