--- a/data-cleaning-practice/text_cleaning_nltk_reg.ipynb
+++ b/data-cleaning-practice/text_cleaning_nltk_reg.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQnWFmmPDlimPT1ZkORviY",
+      "authorship_tag": "ABX9TyPdX2yokT9vSjsa+meCI5ZZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "id": "3VtgmxgjnaXL",
         "outputId": "ce8480cc-07ec-4aa5-a15e-c601e8d4a377"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -96,9 +96,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lcGf9VMbkX_N",
-        "outputId": "084adabe-ca86-420d-ff97-4d0a3b570c57"
+        "outputId": "e61c45e0-cece-4086-a494-7f8ea2aadba8"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 1
         }
       ]
     },
@@ -133,7 +133,7 @@
         "id": "9LO81mWgkb0P",
         "outputId": "9c4875e7-caa5-4b7c-d539-526c46195f4e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
         "id": "c3Ossi9zke9c",
         "outputId": "1baf7b01-72c8-4840-e719-fb68f32cc87c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,9 +220,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w9m_AhkEsgXa",
-        "outputId": "27b7818e-aa6f-4308-9238-401aaddcda6d"
+        "outputId": "2b1ea7e9-b043-4921-de84-4f6750015a9f"
       },
-      "execution_count": 22,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,14 +245,14 @@
       "source": [
         "# Lemmatization\n",
         "\n",
-        "lemmatizer = WordNetLemmatizer()\n",
-        "for word in words:\n",
-        "  print(word + \"--->\" + lemmatizer.lemmatize(word))"
+        "lemma = WordNetLemmatizer()\n",
+        "for x in words:\n",
+        "    print(x+'--->'+lemma.lemmatize(x))"
       ],
       "metadata": {
         "id": "TQtKHIJNsqIC"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
         "id": "S5idDz2VkiaZ",
         "outputId": "887e26af-8e78-496a-de18-1399a3f8c3a2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +342,7 @@
         "id": "oQazL4tmkoZJ",
         "outputId": "0a480157-f1fa-4805-8dbc-a3c1021caa49"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +385,7 @@
         "id": "Q65-K3hMks_4",
         "outputId": "9bef481c-be15-434b-d986-45631d9d8eb5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -427,7 +427,7 @@
         "id": "FCdHPf8Mkv8n",
         "outputId": "9ed98636-78d0-4c11-9270-758e838b23ea"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,7 +455,7 @@
         "id": "NXSKmcgakwBe",
         "outputId": "6e85a822-cadd-46fa-e910-8c6fd849ed9f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -498,7 +498,7 @@
         "id": "RPzbCW4LkwGe",
         "outputId": "3e8b64d5-a31c-4a8d-e946-7d50ffd8c311"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -524,7 +524,7 @@
       "metadata": {
         "id": "it0m43E-k7yz"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +533,7 @@
       "metadata": {
         "id": "d5vMZ30qk712"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
